--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-gemfile:
-   - test/support/Gemfile
 rvm:
   - 1.9.3
 bundler_args: --without development
@@ -7,5 +5,5 @@ before_script:
   - bundle exec berks install
 script: 
   # - bundle exec knife cookbook test -a -o .
-  - bundle exec foodcritic -f any .
+  - bundle exec rake foodcritic
   - bundle exec rubocop
