cleaned up code and will now be checked with rubocop

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -28,5 +28,7 @@ suites:
     attributes:
       bamboo:
         name: bamboo-dev
+        backup:
+          enabled: false
       apt:
         compiletime: true
