--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,7 @@
 AllCops:
-  Excludes:
+  Exclude:
     - test/**
-    - vendor/**
+    - vendor/**/*
     - spec/**
 Documentation:
   Enabled: false
