Correct a RuboCop Offense, and add rspec test to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_script:
 script: 
   # - bundle exec knife cookbook test -a -o .
   - bundle exec rake
-  # - bundle exec rubocop
+  - bundle exec rspec
