--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,6 +12,9 @@ platforms:
 - name: ubuntu-14.04
   run_list:
   - recipe[apt]
+- name: centos-6.5
+  run_list:
+  - recipe[apt]
 
 suites:
   - name: default
