final backup fix with ceph

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -44,7 +44,8 @@ suites:
       bamboo:
         name: bamboo-dev
         backup:
-          enabled: false
+          enabled: true
+          ceph: false
         agent:
           data_dir: /var/bamboo-agent
           home_dir: /opt/bamboo-agent
