updated readme for testing purposes and removed unnaccary permgen because of this is removed in jdk 8

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -44,7 +44,7 @@ suites:
       bamboo:
         name: bamboo-dev
         backup:
-          enabled: true
+          enabled: false
           ceph: false
         agent:
           data_dir: /var/bamboo-agent
