--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,6 +9,10 @@ platforms:
 - name: ubuntu-12.04
   run_list:
   - recipe[apt]
+  attributes:
+    bamboo:
+      database:
+        version: '5.5'
 - name: ubuntu-14.04
   run_list:
   - recipe[apt]
