--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -10,12 +10,17 @@ platforms:
   run_list:
   - recipe[apt]
   attributes:
+    apt:
+      compile_time_update: true
     bamboo:
       database:
         version: '5.5'
 - name: ubuntu-14.04
   run_list:
   - recipe[apt]
+  attributes:
+    apt:
+      compile_time_update: true
 - name: centos-6.5
 
 suites:
@@ -23,8 +28,6 @@ suites:
     run_list:
       - recipe[bamboo]
     attributes:
-      apt:
-        compile_time_update: true
       bamboo:
         name: bamboo-dev
         backup:
