--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -29,10 +29,10 @@ suites:
     run_list:
       - recipe[bamboo]
     attributes:
-      apt:
-        compile_time_update: true
       bamboo:
         name: bamboo-dev
+        database:
+          type: postgresql
         backup:
           enabled: false
           ceph: false
