Fix issues related to test or MySQL + add tests for MySQL
 - In tests, Tomcat crashes because it is started with too much
   minimal memory. Now it starts well with only 64M
 - mysql2 Gem install is required. It was in deps but not installed.
 - Add new test suite 'mysql-56' based simply on copy of default
   tests.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -24,6 +24,8 @@ suites:
       - recipe[bamboo]
     attributes:
       bamboo:
+        jvm:
+          minimum_memory: '64m'
         name: bamboo-dev
         backup:
           enabled: false
@@ -31,3 +33,13 @@ suites:
         agent:
           data_dir: /var/bamboo-agent
           home_dir: /opt/bamboo-agent
+  - name: mysql-56
+    run_list:
+      - recipe[bamboo]
+    attributes:
+      bamboo:
+        jvm:
+          minimum_memory: '64m'
+        database:
+          type: 'mysql'
+          version: '5.6'
