--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,8 +23,8 @@ Style/SpaceBeforeFirstArg:
 #
 # couldn't figure it out so set this
 #
-ClassAndModuleChildren:
-  EnforcedStyle: compact
+#ClassAndModuleChildren:
+#  EnforcedStyle: compact
 
 #
 # libraries/bamboo is to complex for rubocop
