Avoid use of mysql 'default' instance name. Use Bamboo database name instead.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -41,5 +41,6 @@ suites:
         jvm:
           minimum_memory: '64m'
         database:
+          name: 'db1'
           type: 'mysql'
           version: '5.6'
