--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -6,7 +6,7 @@ driver_config:
 
 provisioner:
   name: chef_zero
-  require_chef_omnibus: latest
+  require_chef_omnibus: 12
 
 platforms:
 - name: ubuntu-14.04
